[gd_scene load_steps=2 format=3 uid="uid://bh8w2mwfgynfl"]

[ext_resource type="Script" uid="uid://de8y4aypdxij8" path="res://scenes/pregame.gd" id="1_o02u6"]

[node name="pregame" type="Window"]
auto_translate_mode = 1
title = "Configuraci√≥n de Partida"
initial_position = 1
size = Vector2i(400, 300)
script = ExtResource("1_o02u6")

[node name="Play" type="Button" parent="."]
anchors_preset = -1
anchor_left = 0.39
anchor_top = 0.833333
anchor_right = 0.6075
anchor_bottom = 0.936667
grow_horizontal = 2
grow_vertical = 0
text = "Comenzar"
metadata/_edit_use_anchors_ = true

[node name="CheckBox" type="CheckBox" parent="."]
offset_left = 12.0
offset_top = 139.0
offset_right = 186.0
offset_bottom = 170.0
text = "Partida Modificada"

[node name="CheckBox2" type="CheckBox" parent="."]
offset_left = 13.0
offset_top = 170.0
offset_right = 150.0
offset_bottom = 201.0
text = "Partida De IAs"

[connection signal="pressed" from="Play" to="." method="_on_play_pressed"]
[connection signal="toggled" from="CheckBox" to="." method="_on_check_box_toggled"]
[connection signal="toggled" from="CheckBox2" to="." method="_on_check_box_2_toggled"]
